--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: macos-14
+    xcode-version: 16.2
     steps:
       - uses: actions/checkout@v4
       - name: Build app
